recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: value !=- is not a member of Int
  if (steps!=-1) {
           ^