recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  if (steps!=-1) {
    current(steps)
    avance(length*shrink:Double)
    droite(angle:Double)
    return tree(steps-1,length*shrink,angle,shrink)
  }
  else if (steps==0)
  {recule(length/shrink:Double)
           gauche(angle*2:Double)}
  
  
}
